# woddi-ai-control

./: .env.example  .gitignore  README.md  VERSION  check  install.sh  pyproject.toml  woddi-ai-control
app/: __init__.py  cache.py  chat.py  cli.py  config.py  llm.py  main.py  mcp.py  metrics.py  security.py
config/: docs_sources.json  files_sources.json  mcps.json  runtime.json  system_prompt.txt  users.json
config/personas/: default.md  network-ops.md
docs/: ARCHITECTURE.md  OPERATIONS.md  WEB_UI.md
scripts/: arch-first-setup.sh  start.sh  start_netbox_satellite.sh  status_netbox_satellite.sh  stop_netbox_satellite.sh  ubuntu-first-setup.sh
systemd/: woddi-ai-control.service.tpl
tests/: test_llm.py  test_mcp.py  test_smoke.py
web/: app.css  app.js  index.html
