[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woddi-ai-control"
version = "0.1.0"
description = "MCP-zentrierte Web-AI fuer woddi-ai Satelliten, Doku, Files und NetBox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
woddi-ai-control = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
